// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailVerificationBanner email verify fails 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard page notSend StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
      level="2"
    />
    <div
      class="Layout--horizontal Layout--layout-spacing-xxxlarge StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-right-xxxlarge"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="deployment-incomplete-legacy"
          style="padding-top: 6px;"
        >
          <svg
            height="18"
            viewBox="0 0 14 14"
            width="18"
          >
            <circle
              cx="7"
              cy="7"
              fill="#ff8f3f"
              r="7"
            />
            <circle
              cx="7"
              cy="7"
              fill="#fff"
              r="5.2"
            />
            <path
              d="M6.1 9.6c0-.5.3-1 .9-1s.9.4.9 1-.3 1-.9 1-.9-.4-.9-1zm.3-4.5l-.1-1.3h1.5v1.3l-.3 3h-1z"
              fill="#ff8f3f"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main"
          style="line-height: 2.5; font-weight: 500;"
        >
          common.banners.email.description
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            common.banners.email.resend
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmailVerificationBanner email verify success 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard page sendSuccess StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
      level="2"
    />
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-right-xxxlarge"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="deployment-success-legacy"
        style="padding-top: 6px;"
      >
        <svg
          height="18"
          viewBox="0 0 14 14"
          width="18"
        >
          <circle
            cx="7"
            cy="7"
            fill="#38d168"
            r="7"
          />
          <circle
            cx="7"
            cy="7"
            fill="#fff"
            r="5.2"
          />
          <path
            d="M5.8 9.5l4.4-4.1-.9-1-3.6 3.2-1.2-1.2-1.1 1.1 2.1 2.1.1.1z"
            fill="#38d168"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color"
        style="line-height: 2.5; font-weight: 500;"
      >
        common.banners.email.success
      </p>
    </div>
  </div>
</div>
`;

exports[`EmailVerificationBanner render 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard page notSend StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
      level="2"
    />
    <div
      class="Layout--horizontal Layout--layout-spacing-xxxlarge StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-right-xxxlarge"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="deployment-incomplete-legacy"
          style="padding-top: 6px;"
        >
          <svg
            height="18"
            viewBox="0 0 14 14"
            width="18"
          >
            <circle
              cx="7"
              cy="7"
              fill="#ff8f3f"
              r="7"
            />
            <circle
              cx="7"
              cy="7"
              fill="#fff"
              r="5.2"
            />
            <path
              d="M6.1 9.6c0-.5.3-1 .9-1s.9.4.9 1-.3 1-.9 1-.9-.4-.9-1zm.3-4.5l-.1-1.3h1.5v1.3l-.3 3h-1z"
              fill="#ff8f3f"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main"
          style="line-height: 2.5; font-weight: 500;"
        >
          common.banners.email.description
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--padding-xsmall Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            common.banners.email.resend
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
